--- a/springboot-activiti/src/main/resources/application.yml
+++ b/springboot-activiti/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/oa?useSSL=false&nullCatalogMeansCurrent=true&characterEncoding=UTF-8
     username: root
-    password: password
+    password: root
 
   thymeleaf:
     cache: false
