--- a/springboot-utils/pom.xml
+++ b/springboot-utils/pom.xml
@@ -36,6 +36,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!--json-lib-->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 	</dependencies>
 
 	<build>
