--- a/springboot-core/pom.xml
+++ b/springboot-core/pom.xml
@@ -75,12 +75,16 @@
             <version>1.18.4</version>
         </dependency>
 
-        <dependency>
+     <!--   <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency> -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
         </dependency>
-
 
         <!--引用springboot-activiti项目
         <dependency>
