--- a/springboot-core/src/main/resources/application.yml
+++ b/springboot-core/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/oa?useSSL=false&nullCatalogMeansCurrent=true&characterEncoding=UTF-8
     username: root
     password: root
