模板生成方法权限和showdoc相关注释

--- a/springboot-core/pom.xml
+++ b/springboot-core/pom.xml
@@ -55,13 +55,19 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.1.2</version>
+            <version>3.2.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-generator -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.1.2</version>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dm</groupId>
+            <artifactId>DmJdbcDriver</artifactId>
+            <version>1.8.0</version>
         </dependency>
 
         <dependency>
@@ -76,8 +82,8 @@
         </dependency>
 
      <!--   <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>CodeGeneratorDm</groupId>
+            <artifactId>CodeGeneratorDm-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency> -->
         <dependency>
